# CardioClinic

./: .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 99701a023683_initial_schema.py  a3f7c1e92d01_add_rxcui_and_interactions_synced_at.py  b8e2f4a1c3d5_add_admin_role.py  d5d4ac8859ba_add_patient_instructions_table.py
backend/app/: main.py
backend/app/api/: appointments.py  audit.py  auth.py  calculators.py  dashboard.py  examinations.py  follow_ups.py  instructions.py  interactions.py  investigations.py  medications.py  past_family_history.py  patients.py  prescriptions.py  present_history.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/data/: egyptian_drugs.json
backend/app/models/: __init__.py  appointment.py  audit_log.py  base.py  dosage_instruction.py  enums.py  examination.py  follow_up.py  image.py  instruction.py  investigation.py  investigation_type.py  lab_result.py  medication.py  past_family_history.py  patient.py  patient_medication.py  prescription.py  prescription_item.py  present_history.py  user.py
backend/app/schemas/: appointment.py  auth.py  examination.py  follow_up.py  instruction.py  investigation.py  medication.py  past_family_history.py  patient.py  prescription.py  present_history.py
backend/app/services/: audit.py  drug_interactions.py  email.py  instructions.py  pdf.py  risk_calculators.py  rxnorm_sync.py
backend/scripts/: seed_data.py
(+66 files in other folders)
